#934830 - fix primary menus overflow

--- a/themes/eldir/style.css
+++ b/themes/eldir/style.css
@@ -209,7 +209,6 @@ div#navigation div.breadcrumb {
 div#navigation ul.links {
   padding:5px 0px 0px;
   float:right;
-  width: 320px;
   }
 
 div#navigation ul.links li {
